# mage_corp

./: .cargo-remote.toml  .envrc  .gitignore  Cargo.toml  devenv.nix  flake.nix  justfile  rust-toolchain.toml
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/shaders/: force_material.wgsl  prepass.wgsl  toon_material.wgsl
crates/bevy-implicits/: Cargo.toml
crates/bevy-implicits/src/: inputs.rs  lib.rs  loader.rs  reader.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  markers.rs
crates/common/src/materials/: mod.rs
crates/framix/: Cargo.toml
crates/framix/examples/: basic.rs
crates/framix/src/: brick_wall.rs  find_or_add.rs  floorplan.rs  foundation.rs  lib.rs  primitive.rs  rendered.rs  spawnable.rs
crates/framix/src/floorplan/: ascii_canvas.rs
crates/framix/src/primitive/: brick.rs  concrete.rs  mod.rs  plank.rs
crates/lack/: Cargo.toml
crates/lack/src/: eval.rs  graph.rs  lib.rs  node.rs  tape.rs
crates/lack/src/eval/: cpu.rs
crates/mage_corp/: Cargo.toml
crates/mage_corp/assets/models/: icosahedron.stl
crates/mage_corp/assets/scenes/: boy.glb  tree.glb
crates/mage_corp/assets/shaders/: colors.wgsl  force_material.wgsl  outline.wgsl  prepass.wgsl  toon_extension.wgsl  toon_material.wgsl
crates/mage_corp/src/: debug.rs  main.rs  markers.rs  test_scene.rs
crates/mage_corp/src/camera/: lowres.rs  mod.rs  posing.rs  states.rs
crates/mage_corp/src/camera/low_res/: mod.rs  panorbit_compat.rs
crates/mage_corp/src/camera/lowres/: mod.rs  panorbit_compat.rs
crates/mage_corp/src/camera/posing/: mod.rs  params.rs
crates/mage_corp/src/foliage/: mod.rs
crates/mage_corp/src/low_res/: mod.rs
crates/mage_corp/src/magic/: mod.rs  source.rs  spell.rs  visuals.rs
crates/mage_corp/src/magic/blueprint/: mod.rs  visuals.rs
crates/mage_corp/src/materials/: mod.rs
crates/mage_corp/src/materials/force/: material.rs
crates/mage_corp/src/materials/toon/: material.rs  mod.rs
crates/mage_corp/src/particle/: mod.rs
crates/mage_corp/src/player/: mod.rs
crates/mage_corp/src/terrain/: components.rs  config.rs  gen.rs  mesh.rs  mod.rs  region.rs  regions.rs  timing.rs
crates/mage_corp/src/terrain/mesh/: cache.rs  mod.rs
crates/mage_corp/src/utils/: despawn.rs  in_progress.rs  mod.rs  timer_lifetime.rs
crates/magicore/: Cargo.toml
crates/magicore/src/: lib.rs  source.rs  spell.rs  target.rs
crates/magicore/src/blueprint/: mod.rs  visuals.rs
crates/magicore/src/spell/: types.rs
crates/mosh/: Cargo.toml
crates/mosh/src/: bufmesh.rs  hash.rs  lib.rs  mesh.rs  mizu.rs  simplify.rs
crates/mosh/src/hedge/: buffers.rs  keys.rs  mod.rs  storage.rs
crates/mosh/src/mizu/: buffers.rs  face.rs  simplify.rs  vertex.rs
crates/planiscope/: Cargo.toml
crates/planiscope/src/: builder.rs  collider.rs  comp.rs  lib.rs  mesh.rs  nso.rs  rhai.rs  shape.rs
crates/planiscope/src/cache/: disk.rs  mod.rs
crates/planiscope/src/mesher/: fidget_mesher.rs  fsn_mesher.rs  mod.rs  simplify.rs
crates/planiscope/src/shape/: builder.rs  compound.rs  extra.rs  mod.rs
crates/pls_editor/: Cargo.toml
crates/pls_editor/src/: main.rs
crates/whave/: Cargo.toml
crates/whave/src/: generation.rs  grid.rs  lib.rs  position.rs  sampler.rs
defunct/pls_editor/src/: main.rs
src/: debug.rs  fox.rs  low_res.rs  main.rs  movement.rs  player.rs  scene.rs  test_scene.rs  toon_material.rs  utils.rs
src/low_res/: panorbit_compat.rs
src/materials/: mod.rs
src/materials/force/: material.rs  mod.rs
src/particle/: descriptor.rs  mod.rs
src/player/: mod.rs
src/toon/: material.rs  mod.rs
src/utils/: mod.rs  static_or_closure.rs  timer_lifetime.rs
