[package]
name = "mage_corp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["animation", "bevy_animation", "bevy_asset", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_pbr", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_ui", "bevy_winit", "default_font", "filesystem_watcher", "hdr", "ktx2", "multi-threaded", "png", "tonemapping_luts", "x11", "zstd", "dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_mod_wanderlust = "0.4.0"
bevy_obj = { version = "0.11.0", features = ["scene"] }
bevy_rapier3d = "0.22.0"
bevy_diagnostic_vertex_count = { git = "https://github.com/johnbchron/bevy_diagnostic_vertex_count", tag = "v0.4" }
nanorand = "0.7.0"
bevy_shader_utils = "0.5.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
