[workspace]

members = [
  "crates/*",
  # "examples/*",
]

resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[profile.release]
# lto = true
strip = true
codegen-units = 1

[patch.crates-io]
bevy_a11y = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_animation = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_app = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_asset = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_audio = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_core = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_core_pipeline = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_derive = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_diagnostic = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
# bevy_dylib = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
# bevy_dynamic_plugin = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_ecs = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_encase_derive = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_gilrs = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_gizmos = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_gltf = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_hierarchy = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_input = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_internal = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_log = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_macro_utils = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_math = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_mikktspace = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_pbr = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_ptr = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_reflect = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_render = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_scene = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_sprite = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_tasks = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_text = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_time = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_transform = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_ui = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_utils = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_window = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }
bevy_winit = { git = "https://github.com/johnbchron/bevy.git", branch = "split-pbr-lighting-outputs" }

meshopt2 = { git = "https://github.com/Uriopass/meshopt2.git" }
