[package]
name = "bevy-implicits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planiscope = { path = "../planiscope" }
bevy = { version = "0.12" }
rmp-serde = "1.1.2"
base64 = "0.21.5"
anyhow = "1.0.75"
futures-io = "0.3.29"
bincode = "1.3.3"
fidget = { git = "https://github.com/johnbchron/fidget", tag = "0.3", default-features = false, features = ["mesh", "rhai"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
bevy_xpbd_3d = "0.3.2"
parry3d = "0.13.5"
