[package]
name = "framix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-implicits = { path = "../bevy-implicits" }
common = { path = "../common" }
bevy = "0.12"
glam = "0.24"
rand = "0.8.5"
bevy_xpbd_3d = "0.3.3"
