[package]
name = "mage_corp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", default-features = true, features = ["filesystem_watcher", "wayland"] }
bevy-inspector-egui = "0.19.0"
bevy_obj = { version = "0.11.0", features = ["scene"] }
bevy_diagnostic_vertex_count = { git = "https://github.com/johnbchron/bevy_diagnostic_vertex_count", tag = "v0.4" }
nanorand = "0.7.0"
bevy_shader_utils = "0.5.2"
bevy_panorbit_camera = { version = "0.8.0", features = ["bevy_egui"] }
planiscope = { path = "../planiscope" }
spatialtree = "0.1.1"
futures-lite = "1.13.0"
serde = { version = "1.0.188", features = ["derive"] }
bevy_xpbd_3d = { version = "0.2.0", features = ["simd"] }
interpolation = "0.3.0"
