[package]
name = "mage_corp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [ "file_watcher" ] }
bevy-inspector-egui = "0.21.0"
bevy-implicits = { path = "../bevy-implicits" }
spatialtree = "0.1.1"
bevy_xpbd_3d = { version = "0.3.2", features = [ "debug-plugin" ] }
bevy_panorbit_camera = { version = "0.9.2", features = ["bevy_egui"] }
magicore = { path = "../magicore" }
framix = { path = "../framix" }
common = { path = "../common" }
