[package]
name = "mosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decorum = "0.3.1"
educe = { version = "0.5.9", features = ["Eq", "Hash"] }
glam = { version = "0.24.2", features = ["serde", "core-simd"] }
hashbrown = { version = "0.14.3", features = ["rayon"] }
plexus = "0.0.11"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
