[package]
name = "mosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decorum = "0.3.1"
earcutr = "0.4.3"
educe = { version = "0.5.9", features = ["Eq", "Hash"] }
glam = { version = "0.24.2", features = ["serde", "core-simd"] }
hashbrown = { version = "0.14.3", features = ["rayon"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tracing = "0.1.40"
vec_map = "0.8.2"
