[package]
name = "planiscope"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_reflect = "0.12"
decorum = "0.3.1"
educe = { version = "0.4.23", default-features = false, features = ["Hash"] }
fast-surface-nets = "0.2.0"
fidget = { git = "https://github.com/johnbchron/fidget", tag = "0.3", default-features = false, features = ["mesh", "rhai"] }
float-cmp = "0.9.0"
glam = { version = "0.24.2", features = ["serde", "core-simd"] }
log = "0.4.20"
parry3d = { version = "0.13.5", features = ["serde-serialize"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
