[package]
name = "pls_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = true, features = [ "bevy_asset", "bevy_core_pipeline", "bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_winit", "multi-threaded", "x11", "dynamic_linking", "wayland" ] }
bevy_egui = "0.21"
futures-lite = "1.13.0"
planiscope = { path = "../planiscope" }
fidget = { path = "../../../fidget/fidget", default-features = false }
anyhow = "1.0.71"
